funcionalidad de creacion para citas e inmuebles, creacion de la vista create inmueble y create cita

--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Spring eCommerce</title>
+  <title>Inmuebles M&Z</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -29,8 +29,8 @@
 
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
-        <h1 class="display-3">Bienvenido a Spring Ecommerce 2021</h1>
-        <p class="lead">Tu tienda de productos en Línea</p>
+        <h1 class="display-3">Bienvenido a Inmuebles M&Z</h1>
+        <p class="lead">Tu hogar al alcance de tu mano</p>
       </header>
 
       <!-- Page Features -->
@@ -40,10 +40,10 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
+              <p class="card-text">Nombre del inmueble.</p>
             </div>
             <div class="card-footer">
-              <a href="productohome.html" class="btn btn-success">Ver producto</a>
+              <a href="productohome.html" class="btn btn-success">Ver inmueble</a>
             </div>
           </div>
         </div>
@@ -52,10 +52,10 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
+              <p class="card-text">Nombre del inmueble.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver producto</a>
+              <a href="#" class="btn btn-success">Ver inmueble</a>
             </div>
           </div>
         </div>
@@ -64,10 +64,10 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
+              <p class="card-text">Nombre del inmueble.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver producto</a>
+              <a href="#" class="btn btn-success">Ver inmueble</a>
             </div>
           </div>
         </div>
@@ -75,10 +75,10 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
+              <p class="card-text">Nombre del inmueble.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver producto</a>
+              <a href="#" class="btn btn-success">Ver inmueble</a>
             </div>
           </div>
         </div>
