--- a/src/main/resources/templates/Citas/showcitas.html
+++ b/src/main/resources/templates/Citas/showcitas.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Spring eCommerce</title>
+  <title>Inmuebles M&Z</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -30,23 +30,23 @@
 
   <!-- Page Heading/Breadcrumbs -->
   <h1 class="mt-4 mb-3">
-    Spring eCommerce <small>Productos</small>
+    Inmuebles M&Z <small>Citas</small>
   </h1>
 
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item active">Ver Productos</li>
+    <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
+    <li class="breadcrumb-item active">Ver Citas</li>
   </ol>
 
-  <a class="btn btn-primary" href="#" > Crear Producto</a>
-  <h2>Productos</h2>
+  <a class="btn btn-primary" th:href="@{/citas/createcita}" > Crear Cita</a>
+  <h2>Citas</h2>
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Descripción</th>
-        <th scope="col">Inventario</th>
-        <th scope="col">Precio</th>
+        <th scope="col">id</th>
+         <th scope="col">Dia</th>
+        <th scope="col">Mes</th>
+        <th scope="col">Horario</th>
         <th scope="col">Acción</th>
         <th scope="col">Acción</th>
       </tr>
