--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -3,7 +3,7 @@
   <div th:fragment="header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Spring eCommerce</a>
+      <a class="navbar-brand" th:href="@{/administrador}">Inmuebles M&Z</a>
 
       <form class="form-inline my-2 my-lg-0" method="post"
       action="#">
@@ -19,10 +19,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link"
-          href="carrito.html">Carrito</a></li>
-          <li class="nav-item"><a class="nav-link"
-            href="login.html">Login</a></li>
+        <li class="nav-item dropdown"><a
+							<li class="nav-item dropdown"><a
+          class="nav-link dropdown-toggle" href="#"
+          id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"> ADMIN </a>
+          <div class="dropdown-menu"
+          aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" th:href="@{/inmuebles}">Inmuebles</a> <a
+          class="dropdown-item" th:href="@{/citas}">Citas</a>
+        </div></li>
           </ul>
         </div>
       </div>
@@ -33,7 +39,7 @@
     <div th:fragment="footer">
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Inmuebles M&Z 2022</p>
       </div>
       <!-- /.container -->
     </footer>
