--- a/src/main/resources/templates/Inmuebles/createinmueble.html
+++ b/src/main/resources/templates/Inmuebles/createinmueble.html
@@ -59,8 +59,9 @@
 	<div class="form-group">
       <label class="control-label col-sm-2" for="direccion">Dirección:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="direccion" name="direccion"
-        placeholder="Ingrese la dirección del inmueble" autocomplete="off" required>
+        <textarea class="form-control" id="direccion" name="direccion"
+        placeholder="Ingrese la direccion del producto" required
+        autocomplete="off"> </textarea>
       </div>
     </div>
 
