--- a/src/main/resources/templates/Inmuebles/showinmuebles.html
+++ b/src/main/resources/templates/Inmuebles/showinmuebles.html
@@ -57,7 +57,7 @@
         <td th:text="${inmueble.descripcion}"></td>
         <!--<td th:text="${inmueble.direccion}"></td>-->
         <td th:text="${inmueble.precio}"></td>
-        <td><a  class="btn btn-warning" href="">Editar</a> </td>
+        <td><a  class="btn btn-warning" th:href="@{inmuebles/editinmueble/{id} (id=${inmueble.id})}">Editar</a> </td>
         <td><a  class="btn btn-danger" href="">Eliminar</a> </td>
       </tr>       
     </tbody>
