implementacion de las funcionalidades de cargar imagen y mostrar imagen para el administrador

--- a/src/main/resources/templates/Citas/createcita.html
+++ b/src/main/resources/templates/Citas/createcita.html
@@ -30,7 +30,7 @@
 
   <!-- Page Heading/Breadcrumbs -->
   <h1 class="mt-4 mb-3">
-    Inmuebles M&Z <small>Productos</small>
+    Inmuebles M&Z <small>Citas</small>
   </h1>
 
   <ol class="breadcrumb">
