--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -36,49 +36,14 @@
       <!-- Page Features -->
       <div class="row text-center">
 
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-3 col-md-6 mb-4" th:each="inmueble: ${inmuebles}">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" th:src="@{/images/{img} (img=${inmueble.imagen})} " alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del inmueble.</p>
+              <p class="card-text" th:text="${inmueble.nombre}"></p>
             </div>
             <div class="card-footer">
               <a href="productohome.html" class="btn btn-success">Ver inmueble</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del inmueble.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver inmueble</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del inmueble.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver inmueble</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del inmueble.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-success">Ver inmueble</a>
             </div>
           </div>
         </div>
