funcionalidad para ver inmueble para el usuario

--- a/src/main/resources/templates/Usuario/home.html
+++ b/src/main/resources/templates/Usuario/home.html
@@ -12,10 +12,10 @@
 
 
 	<!-- Bootstrap core CSS -->
-	<link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
-	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
 </head>
 
@@ -44,7 +44,7 @@
 						<p class="card-text" th:text="${inmueble.nombre}"></p>
 					</div>
 					<div class="card-footer">
-						<a href="productohome.html" class="btn btn-success">Ver inmueble</a>
+						<a th:href="@{inmueblehome/{id} (id=${inmueble.id}) }" class="btn btn-success">Ver inmueble</a>
 					</div>
 				</div>
 			</div>
@@ -58,8 +58,8 @@
 	<div th:include="usuario/template_usuario.html::footer"> 
 
 	<!-- Bootstrap core JavaScript -->
-	<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-	<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
