--- a/src/main/resources/templates/Usuario/inmueblehome.html
+++ b/src/main/resources/templates/Usuario/inmueblehome.html
@@ -35,7 +35,7 @@
       </h1>
 
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
         <li class="breadcrumb-item active">Inmueble</li>
       </ol>
 
@@ -45,26 +45,25 @@
           <div class="row">
             <div class="col-lg-6">
               <a href="#"> <img class="img-fluid rounded"
-                src="http://placehold.it/500x325"  alt="">
+                th:src="@{/images/{img} (img=${inmueble.imagen}) }"  alt="">
               </a>
             </div>
             <div class="col-lg-6">
               <form action="carrito.html" method="POST">
-                <h2 class="card-title">Nombre producto</h2>
+                <h2 class="card-title" th:text="${inmueble.nombre}"></h2>
 
                 <ul class="list-group">
-                  <li class="list-group-item"><h5>Precio: </h5></li>
+                  <li class="list-group-item"><h5 th:text=" 'Precio : ' + ${inmueble.precio}"> </h5></li>
                   <li class="list-group-item">
-                    <p>Descripción:</p>
+                    <p th:text=" 'Descripcion: ' + ${inmueble.descripcion}">:</p>
                   </li>
-                  <li class="list-group-item"><h6>
-                    Cantidad: <input type="number" id="cantidad" name="cantidad" autocomplete="off"
-                    min="1" max="5" value="1">
-                  </h6></li>
+                  <li class="list-group-item">
+                    <p th:text=" 'Direccion: ' + ${inmueble.direccion}">:</p>
+                  </li>
                 </ul>
 
 
-                <button type="submit"  class="btn btn-dark">Añadir al carrito </button>
+                <button type="submit"  class="btn btn-dark">Solicitar visita </button>
 
               </form>
             </div>
