funcionalidad vista de agenda

--- a/src/main/resources/templates/Usuario/agenda.html
+++ b/src/main/resources/templates/Usuario/agenda.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- Navigation -->
-<div th:include="usuario/template_usuario.html::header"> 
+  <div th:include="usuario/template_usuario.html::header"> 
 	</div>
 
     <!-- Page Content -->
@@ -31,47 +31,52 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Inmuebles M&Z <small>Inmueble</small>
+        Inmuebles M&Z <small>Agendar cita</small>
       </h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Inmueble</li>
+        <li class="breadcrumb-item active">Agendar cita</li>
       </ol>
 
       <!-- Blog Post -->
       <div class="card mb-4">
         <div class="card-body">
           <div class="row">
-            <div class="col-lg-6">
-              <a href="#"> <img class="img-fluid rounded"
-                th:src="@{/images/{img} (img=${inmueble.imagen}) }"  alt="">
-              </a>
-            </div>
-            <div class="col-lg-6">
-              <form th:action="@{/schedule}" method="POST">
-                <h2 class="card-title" th:text="${inmueble.nombre}"></h2>
-
-                <ul class="list-group">
-                  <li class="list-group-item"><h5 th:text=" 'Precio : ' + ${inmueble.precio}"> </h5></li>
-                  <li class="list-group-item">
-                    <p th:text=" 'Descripcion: ' + ${inmueble.descripcion}">:</p>
-                  </li>
-                  <li class="list-group-item">
-                    <p th:text=" 'Direccion: ' + ${inmueble.direccion}">:</p>
-                  </li>
-                </ul>
-
-
-                <button type="submit"  class="btn btn-dark" >Solicitar visita </button>
-
-              </form>
-            </div>
+           <div class="col-lg-9">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Producto</th>
+                  <th scope="col">Precio</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Total</th>
+                  <th scope="col">Acción</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td >Nombre</td>
+                  <td >Precio</td>
+                  <td>Cantidad</td>
+                  <td >Total</td>
+                  <td><a href="#" class="btn btn-danger">Quitar</a></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
+
+          <div class="col-lg-3">
+            <h2 class="card-title">SUBTOTAL</h2>
+
+            <ul class="list-group">
+              <li class="list-group-item"><h5>Total: $ 10</h5></li>
+              <a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
+            </ul>
+          </div>
+
         </div>
       </div>
-
-
     </div>
     <!-- /.container -->
 
@@ -81,6 +86,7 @@
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
   </body>
 
   </html>
