--- a/src/main/resources/templates/Usuario/login.html
+++ b/src/main/resources/templates/Usuario/login.html
@@ -16,7 +16,6 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
 </head>
 
 <body>
@@ -41,56 +40,43 @@
   </nav>
 
 
- <!-- Page Content -->
+  <!-- Page Content -->
   <div class="container">
 
     <div class="card mb-3">
       <div class="row no-gutters">
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+        </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h2>Registro</h2>
+            <h2>Ingresar</h2>
 
           </div>
         </div>
       </div>
     </div>
-    <form th:action="@{/usuario/save}" method="post">
+
+    
+    <form  th:action="@{/usuario/acceder}" method="post">
       <div class="form-group">
-        <label for="nombres">Nombre:</label> <input type="text"
-          class="form-control" id="nombre" name="nombre" required
-          placeholder="Ingrese su nombre" autocomplete="off">
-      </div>
-      
-      <div class="form-group">
-        <label for="apellido">Apellido:</label> <input type="text"
-          class="form-control" id="apellido" name="apellido" required
-          placeholder="Ingrese su apellido" autocomplete="off">
+        <label for="email"> Email:  </label>      
+        <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required autocomplete="off"> 
+
       </div>
 
       <div class="form-group">
-        <label for="email">Email:</label> <input type="email"
-          class="form-control" id="email" name="email" required
-          placeholder="Ingrese su email" autocomplete="off">
+        <label for="pwd"> Contraseña:</label>
+        <input type="password"  class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required>       
       </div>
 
       <div class="form-group">
-        <label for="telefono">Telefono:</label> <input type="text"
-          class="form-control" id="telefono" name="telefono" required
-          placeholder="Ingrese su telefono" autocomplete="off">
-      </div>
-
-      <div class="form-group">
-        <label for="pwd">Contraseña</label> <input type="password"
-          class="form-control" id="password" name="password" required placeholder="Ingrese su contraseña" autocomplete="off">
-      </div>
-      <div class="col-sm-2">
-        <button type="submit" class="btn btn-success">Guardar</button>
-      </div>
+        <div class="col-sm-2">
+          <button type="submit" class="btn btn-dark"> <span class="glyphicon glyphicon-ok"></span> Ingresar</button>
+        </div>      
+      </div>    
     </form>
-
+    <a th:href="@{/usuario/registro}" class="card-link">Si aún no tiene cuenta aqui puede registrarse</a>
   </div>
-
   <!-- /.container -->
 
 	<!-- Footer -->
