--- a/src/main/resources/templates/Usuario/template_usuario.html
+++ b/src/main/resources/templates/Usuario/template_usuario.html
@@ -40,8 +40,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="carrito.html">Agendar cita</a></li>
-						<li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}">Login</a></li>
 					</ul>
 				</div>
 			</div>
