cerrar la sesion del usuario

--- a/src/main/resources/templates/Usuario/template_usuario.html
+++ b/src/main/resources/templates/Usuario/template_usuario.html
@@ -80,6 +80,7 @@
           aria-haspopup="true" aria-expanded="false"> USER </a>
           <div class="dropdown-menu"
           aria-labelledby="navbarDropdownMenuLink"> 
+          <a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
           <a class="dropdown-item" th:href="@{/citas}">Citas</a>
         </div></li>
           </ul>
