--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -27,7 +27,8 @@
           <div class="dropdown-menu"
           aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" th:href="@{/inmuebles}">Inmuebles</a> <a
-          class="dropdown-item" th:href="@{/citas}">Citas</a>
+          class="dropdown-item" th:href="@{/citas}">Citas</a> <a
+          class="dropdown-item" th:href="@{/usuario/cerrar}">Cerrar sesion</a>
         </div></li>
           </ul>
         </div>
